--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -10,11 +10,14 @@
     = f.label :عنوان
     = f.text_field :title
   .field
-    = f.label :تصویر
-    = f.file_field :photo
-  .field
     = f.label :توضیحات
     %br
     = f.text_area :description
+  .field
+    =f.fields_for :pictures do |picture|  
+      .field
+        =picture.file_field :photo
+        =picture.text_area :description, :rows => 3
+
   .actions
     = f.submit 'ثبت'
