--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -16,7 +16,7 @@
   .field
     =f.fields_for :pictures do |picture|  
       .field
-        =picture.file_field :photo
+        =picture.file_field :image
         =picture.text_area :description, :rows => 3
 
   .actions
