picture of product & services

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,13 @@ div {
     list-style: square;
   }
 }
+
+.newP_page { margin-right:200px;border:yellow solid 1px; width:900px; direction:rtl; }
+.submit { text-align:center}
+.title { text-align:center;}
+
+#new_btn { background-color:yellow; text-decoration:none;  }
+#new_btn:hover {background-color:#a3c;}
+
+.div_btn { text-align:left; margin-left:10px }
+a { text-decoration:none;}
