--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the services controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.des {margin-right:10px; } 
+.div_pic {float:right; width:850px; border:yellow solid; height:100px; margin-right:20px}
+.cr {clear:both}
+.footer_Link {text-align:center}
+#new_btn { background-color:yellow; text-decoration:none;  }
+#new_btn:hover {background-color:#a3c;}
+.pic_service {float:right; margin:5px;}
