--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,4 +1,4 @@
-%div.main
+%div.main{:align => "center"}
 	%div.header
 		%div.logo
 			LoGo 
@@ -13,7 +13,7 @@
 		%div.clear_float
 		%div.slider
 			%img{:src => "/images/2006-manufactured02.jpg"}/
-		%div.footer
+		%div.footer{:align => "center"}
 			%div.product_ser
 				Product
 			%div.product_ser
