--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,7 +7,7 @@ body    {
           padding: 0;
           }
 .bgcolor { background-color:#aaa; dir:rtl;}
-.main { min-height:800px; width:1100px; margin-left:90px; display: inline-block;}
+.main { min-height:800px; width:1100px; margin-right:90px; display: inline-block;}
 .header { border: yellow solid 1px}
 .logo { border: blue solid}
 .menu { background-color:#489; width:500px; height:20px; margin-left:370px; text-align: center }
