--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @product
+= link_to 'مشاهده', @product
 \|
-= link_to 'Back', products_path
+= link_to 'بازگشت', products_path
