--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @service do |f|
+= form_for @service, :html => { :multipart => true  }  do |f|
   - if @service.errors.any?
     #error_explanation
       %h2= "#{pluralize(@service.errors.count, "error")} prohibited this service from being saved:"
@@ -7,13 +7,16 @@
           %li= msg
 
   .field
-    = f.label :title
+    = f.label "عنوان خدمات"
     = f.text_field :title
   .field
-    = f.label :img_url
-    = f.text_field :img_url
-  .field
-    = f.label :description
-    = f.text_area :description
+    = f.label  "توضیحات" 
+    %br
+    = f.text_area :description 
+    .field
+    =f.fields_for :pictures do |picture|  
+      .field
+        =picture.file_field :image
+        =picture.text_area :description, :rows => 3
   .actions
-    = f.submit 'Save'
+    = f.submit 'ثبت'
