--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New service
+%div.newP_page
+	%h1 تعریف خدمات جدید
 
-= render 'form'
+	= render 'form'
 
-= link_to 'Back', services_path
+	= link_to 'بازگشت', services_path
