--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,15 +1,20 @@
 %p#notice= notice
-
-%p
-  %b Title:
-  = @service.title
-%p
-  %b Img url:
-  = @service.img_url
-%p
-  %b Description:
-  = @service.description
-
-= link_to 'Edit', edit_service_path(@service)
-\|
-= link_to 'Back', services_path
+%div.newP_page
+  %p
+    %b عنوان خدمات:
+    = @service.title
+  
+  %div.des
+    %b توضیحات:
+    = raw @service.description
+  %div
+    %br
+    %div.div_pic	  
+      -@service.pictures.each do |photo|
+        = image_tag photo.image(:small), :class => "pic_service"
+  
+  %div.cr
+  %div.footer_Link
+    = link_to 'اعمال تغییرات', edit_service_path(@service)
+    \|
+    = link_to 'بازگشت', services_path
