--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,23 +1,23 @@
 %div.main{:align => "center"}
-	%div.header
-		%div.logo
-			LoGo 
-		%div.menu 
-			search...
-			%div.item 
-				Contact us
-			%div.item
-				About us
-			%div.item
-				other-item
-		%div.clear_float
-		%div.slider
-			%img{:src => "/images/2006-manufactured02.jpg"}/
-		%div.footer{:align => "center"}
-			%div.product_ser
-				Product
-			%div.product_ser
-				Services
-			%div.product_ser
-				Other-details
-	
+  %div.header
+    %div.logo
+      LoGo 
+    %div.menu 
+      search...
+      %div.item 
+        Contact us
+      %div.item
+        About us
+      %div.item
+        other-item
+    %div.clear_float
+    %div.slider
+      %img{:src => "assets/rails.png"}/
+    %div.footer{:align => "center"}
+      %div.product_ser
+        Product
+      %div.product_ser
+        Services
+      %div.product_ser
+        Other-details
+  
