--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "ckeditor.js" %>  
+  <%= javascript_include_tag "jquery_003.js" %>
+  <%= javascript_include_tag "jquery_002.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body class="bgcolor" >
