--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,39 +11,9 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    .navbar.navbar-inverse.navbar-fixed-top
-      .navbar-inner
-        .container
-          %button.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse", type: "button"}
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand{href: "#"} company name
-          .nav-collapse.collapse
-            %ul.nav
-              %li.active
-                =link_to "Home page", root_path
-              %li
-                %a{href: "#about"} about us
-              %li
-                %a{href: "#contact"} contact us
-              %li.dropdown
-                %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-                  services and products
-                  %b.caret
-                %ul.dropdown-menu
-                  %li
-                    %a{href: "#"} services
-                  %li
-                    %a{href: "#"} products
-                  %li.divider
-                  %li.nav-header تیتر ناوبری
-                  %li
-                    %a{href: "#"} پیوند جداشده
-                  %li
-                    %a{href: "#"} یک پیوند جداشده دیگر
+    =render "shared/menu_bar"
     .container
       =yield
       %hr/
       %footer
-        %p © شرکت ۱۳۹۱
+        %p © راش ۱۳۹۲
