--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,13 +1,10 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.newP_page { margin-right:200px;border:yellow solid 1px; width:900px; direction:rtl; }
-.submit { text-align:center}
-.title { text-align:center;}
-
-#new_btn { background-color:yellow; text-decoration:none;  }
-#new_btn:hover {background-color:#a3c;}
-
-.div_btn { text-align:left; margin-left:10px }
-a { text-decoration:none;}
+.product-row{
+  height: 60px;
+}
+.row-controls{
+  width: 60px;
+  
+}
