--- a/app/assets/stylesheets/slides.css.scss
+++ b/app/assets/stylesheets/slides.css.scss
@@ -21,9 +21,9 @@ filter:alpha(opacity=100); /* For IE8 and earlier */}
 #slide_img {margin:20px}
 
 .new_form {border: red solid 1px; margin-right:30px;  width:500px; float:right}
-.crop_image {border:yellow solid 1px; width:500px; float:right ;margin-right:20px; }
+.crop_image {border:yellow solid 1px; width:800px; float:right ;margin-right:20px; }
 
 img .cropImage {display: inline; width: 480px; height: 300px; left: 0px; top: 0px;}
 
-.Crop_valude {width:100px; float:right; border: blue solid 1px}
+.Crop_value {width:100px; float:right; border: blue solid 1px}
 
