--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -1,7 +1,62 @@
-%h1 Editing slide
+%h1 ثبت تغییرات
 
-= render 'form'
 
-= link_to 'Show', @slide
-\|
-= link_to 'Back', slides_path
+%div
+  .crop_image
+    %script{defer: "defer", type: "text/javascript"}
+      $( function () {      $( '.crop' ).each( function () {
+      var image = $( this )
+      , results = image.next( '.results' )
+      , x  = $( '.cropX', results )
+      , y  = $( '.cropY', results )
+      , w  = $( '.cropW', results )
+      , h  = $( '.cropH', results )
+      , crop  = image
+      \.crop( {
+      controls : 'Drag to move, scroll to zoom'
+      } )
+      \.on( 'crop', function( event ) {
+      x.text( event.cropX );
+      y.text( event.cropY );
+      w.text( event.cropW );
+      h.text( event.cropH );
+      })
+      \.data('crop');
+      image
+      \//.on( 'dblclick', $.proxy( crop.zoomIn, crop ) )
+      \.on( 'mousewheel', function ( event ) {
+      return event.originalEvent.wheelDelta < 0 ?
+      crop.zoomIn() :
+      crop.zoomOut();
+      } );
+      } );
+      });
+    
+    = form_for @slide, :html => {:multipart => true} do |f| 
+      .field
+        = f.label :توضیحات
+        = f.text_area :description, :id => "slide_des"
+      
+        = image_tag @slide.image.url(:original), :style => "display: inline; width: 907px; height: 567px; left: -184px; top: -236px;", :class => "crop cropImage", :height => "400", :width => "800", :alt => "loading..."
+        
+      .results
+        %b> X
+        \:
+        %span.cropX 0
+        = succeed ":" do
+          %b Y
+        %span.cropY 0
+        = succeed ":" do
+          %b W
+        %span.cropW 800
+        = succeed ":" do
+          %b H
+        %span.cropH 400
+      .cr
+      .div_btn
+        = f.submit 'ثبت تصویر'
+      
+.footer_Link
+  = link_to 'Show', @slide
+  \|
+  = link_to 'Back', slides_path
