--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -2,57 +2,17 @@
 
 
 %div
-  .crop_image
-    %script{defer: "defer", type: "text/javascript"}
-      $( function () {      $( '.crop' ).each( function () {
-      var image = $( this )
-      , results = image.next( '.results' )
-      , x  = $( '.cropX', results )
-      , y  = $( '.cropY', results )
-      , w  = $( '.cropW', results )
-      , h  = $( '.cropH', results )
-      , crop  = image
-      \.crop( {
-      controls : 'Drag to move, scroll to zoom'
-      } )
-      \.on( 'crop', function( event ) {
-      x.text( event.cropX );
-      y.text( event.cropY );
-      w.text( event.cropW );
-      h.text( event.cropH );
-      })
-      \.data('crop');
-      image
-      \//.on( 'dblclick', $.proxy( crop.zoomIn, crop ) )
-      \.on( 'mousewheel', function ( event ) {
-      return event.originalEvent.wheelDelta < 0 ?
-      crop.zoomIn() :
-      crop.zoomOut();
-      } );
-      } );
-      });
-    
+  .crop_image    
     = form_for @slide, :html => {:multipart => true} do |f| 
-      .field
-        = f.label :توضیحات
-        = f.text_area :description, :id => "slide_des"
       
-        = image_tag @slide.image.url(:original), :style => "display: inline; width: 907px; height: 567px; left: -184px; top: -236px;", :class => "crop cropImage", :height => "400", :width => "800", :alt => "loading..."
-        
-      .results
-        %b> X
-        \:
-        %span.cropX 0
-        = succeed ":" do
-          %b Y
-        %span.cropY 0
-        = succeed ":" do
-          %b W
-        %span.cropW 800
-        = succeed ":" do
-          %b H
-        %span.cropH 400
-      .cr
+      = f.label :توضیحات
+      = f.text_area :description, :id => "slide_des"
+    
+      = image_tag @slide.image.url(:original), :class => "crop cropImage", :height => "360", :width => "950"
+      = f.text_field :crop_x
+      = f.text_field :crop_y
+      = f.text_field :crop_w
+      = f.text_field :crop_h
       .div_btn
         = f.submit 'ثبت تصویر'
       
@@ -60,3 +20,28 @@
   = link_to 'Show', @slide
   \|
   = link_to 'Back', slides_path
+
+:javascript
+  $( '.crop' ).each( function () {
+    var image = $( this )
+    , crop  = image
+    .crop( {
+      controls : 'Drag to move, scroll to zoom'
+    } )
+    .on( 'crop', function( event ) {
+      $("#slide_crop_x").val(event.cropX);
+      $("#slide_crop_y").val(event.cropY);  
+      $("#slide_crop_h").val(event.cropH);
+      $("#slide_crop_w").val(event.cropW);
+    })
+    .data('crop');
+      image
+      .on( 'dblclick', $.proxy( crop.zoomIn, crop ) )
+      .on( 'mousewheel', function ( event ) {
+      return event.originalEvent.wheelDelta < 0 ?
+      crop.zoomIn() :
+      crop.zoomOut();
+    } );
+  } );
+      
+    
