better design for slide edit page and slide index page and test on product index page

--- a/app/assets/stylesheets/slides.css.scss
+++ b/app/assets/stylesheets/slides.css.scss
@@ -27,3 +27,8 @@ img .cropImage {display: inline; width: 480px; height: 300px; left: 0px; top: 0p
 
 .Crop_value {width:100px; float:right; border: blue solid 1px}
 
+.slide-description{
+  width:700px;
+  height: 50px;
+  
+} 
