--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,21 @@ body{
   width: 24px;
   height:20px;
 }
+.item-row{
+  position: relative;
+}
+.row-controls{  
+  visibility:hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 60px;
+}
+
+.item-row:hover .row-controls {
+ visibility:visible;
+}
+.item-row:hover{
+  border: 1px yellow solid;
+}
