--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -14,6 +14,8 @@
               %i.icon-trash
           #descrip
             = slide.description
+    %a.carousel-control.left{"data-slide" => "prev", href: ".carousel"} ›
+    %a.carousel-control.right{"data-slide" => "next", href: ".carousel"}‹             
 
 :javascript
   $(".item").first().addClass("active");
