--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -5,7 +5,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{href: "#"} company name
+      =link_to "company name", root_path , :class => "brand"
       .nav-collapse.collapse
         %ul.nav
           %li.active
