--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require_tree .
  */
 body{
-  padding-top: 60px;
+  padding-top: 23px;
   padding-bottom: 40px;
 }
 .language-icon{
@@ -36,4 +36,9 @@ body{
 }
 .item-row:hover{
   border: 1px yellow solid;
+}
+
+#slider-holder{
+  padding: 7px;
+  margin-bottom: 10px;
 }
