--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 
 %p
-  %b Page title:
+  %b 
   = @page.page_title
 %p
   %b Page html en:
@@ -12,4 +12,5 @@
 
 = link_to 'Edit', edit_page_path(@page)
 \|
-= link_to 'Back', pages_path
+= link_to 'back', root_path
+
