--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -4,8 +4,12 @@
       -Slide.all.each do |slide|
         .item
           =image_tag slide.image(:gallery_size)
+          .image-des-holder
+            %p
+              = slide.description
     %a.carousel-control.left{"data-slide" => "prev", href: ".carousel"} ›
     %a.carousel-control.right{"data-slide" => "next", href: ".carousel"}‹             
+        
 .row
   .span4
     %h2 products
