set validate and slider partial

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -11,7 +11,7 @@
 
   - @pages.each do |page|
     %tr
-      %td= page.page_title
+      %td= page.title
       %td=raw page.page_html_en
       %td=raw page.page_html_fa
       %td= link_to 'Show', page
