--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -12,7 +12,7 @@
             =link_to "Home page", root_path
           - Page.all.each do |page|
             %li
-              = link_to page.page_title, page
+              = link_to page.title, page
           %li
             =link_to "services", services_path  
           %li
