--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -7,8 +7,8 @@
           %li= msg
 
   .field
-    = f.label :page_title
-    = f.text_field :page_title
+    = f.label :title
+    = f.text_field :title
   .field
     = f.label :page_html_en
     %br
