--- a/app/views/slides/index.html.haml
+++ b/app/views/slides/index.html.haml
@@ -1,21 +1,7 @@
 %h1 اسلاید شو
 
 = link_to 'add new image', new_slide_path, :class => "btn"
-.hero-unit
-  .carousel.slide
-    .carousel-inner
-      -@slides.each do |slide|
-        .item-row.item
-          = link_to (image_tag slide.image(:gallery_size), :id =>  slide.id ), slide, :class => "slide"
-          .row-controls
-            = link_to edit_slide_path(slide) do
-              %i.icon-edit
-            = link_to  slide, :method => :delete, :data => { :confirm => 'Are you sure?' }  do
-              %i.icon-trash
-          #descrip
-            = slide.description
-    %a.carousel-control.left{"data-slide" => "prev", href: ".carousel"} ›
-    %a.carousel-control.right{"data-slide" => "next", href: ".carousel"}‹             
+= render 'home/slider'            
 
 :javascript
   $(".item").first().addClass("active");
