set flag buttons to change the language

--- a/app/views/home/moh.html.haml
+++ b/app/views/home/moh.html.haml
@@ -1,4 +1,7 @@
--I18n.locale = "fa"
+oooooooooooooooooooooo
+= I18n.locale
+oooooooooooooooooooooo
+%br
 =t "products_section.title"
 %br
 =t "products_section.edit_product"
