--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,12 +8,12 @@
     %title
       industrial web site | #{@head.fetch(:title, '') if @head}
     =stylesheet_link_tag "application", :media => "all"
+    =stylesheet_link_tag "styles", :media => "all"
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    =render "shared/menu_bar"
+    
     .container
       =yield
       %hr/
-      %footer
-        %p © راش ۱۳۹۲
+      
