--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,17 +6,17 @@ img											{border:0}
 h1,h2,h3,h4,h5,h6							{font-weight:normal}
 li											{list-style:none}
 
-#head										{width:100%;float:left; background:url(headBg.png) repeat-x}
-.head_height								{height:478px}
+#head										{width:100%;float:left;}
+.head_height								{height:160px}
 .head_pad									{padding-bottom:30px}
-#head_cen									{width:800px; margin:0 auto}
-#head_sup									{width:800px; float:left; position:relative}
+#head_cen									{width:100%; margin:0 auto}
+#head_sup									{width:100%; float:left; position:relative}
 #head p.search								{width:auto; margin-top:12px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
 #head p.search input.txt					{width:135px; height:21px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 #head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:160px; height:36px; margin-top:112px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:160px; height:36px; margin-top:50px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:500px; height:30px; margin-top:45px; float:right}
 #head ul li									{width:auto; margin-left:1px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
@@ -26,7 +26,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-24px}
 
-#content									{margin-top:20px; width:100%; padding-bottom:36px; float:left; background:#ffffff url(contentBg.png) repeat-x}
+#content									{margin-top:0px; width:100%; padding-bottom:36px; float:left; background:#ffffff url(contentBg.png) repeat-x}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -105,4 +105,6 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
 
-.div-slider {margin-top:160px;}
+.div-slider {width:95%;margin-right:20px;}
+.clrear-float {clear:both}
+.head-serach {width:100%; background:url(headsearch.png) repeat-x}
