--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    
+    = render "shared/menu_bar"
     .container
       =yield
       %hr/
