--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -7,15 +7,24 @@
           %li= msg
 
   .field
-    = f.label :عنوان
+    = f.label :title
     = f.text_field :title
   .field
-    = f.label :توضیحات
+    = f.label :title_fa
+    = f.text_field :title_fa
+
+  .field
+    = f.label :description
     %br
       %div.editor
       = f.text_area :description, :class => "ckeditor"
-      :javascript
-        CKEDITOR.replace( 'product_description' );
+
+  .field
+    = f.label :description_fa
+    %br
+      %div.editor
+      = f.text_area :description_fa, :class => "ckeditor"    
+      
   .field
     =f.fields_for :pictures do |picture|  
       .field
