--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -132,10 +132,10 @@
   .navbar-fixed-top .container,
   .navbar-fixed-bottom .container {
     width: 1170px;
-    background:url(headBg2.png) repeat-x
+    background:url(headBg.png) repeat;
   }
   .span12 {
-    width: 1170px;
+    width: 1170px; 
   }
   .span11 {
     width: 1070px;
