--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -11,12 +11,12 @@ li											{list-style:none}
 .head_pad									{padding-bottom:30px}
 #head_cen									{width:100%; margin:0 auto}
 #head_sup									{width:100%; float:left; position:relative}
-#head p.search								{width:auto; margin-top:12px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
+#head p.search								{width:auto; margin-top:12px; margin-right:20px; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; line-height:25px; letter-spacing:1px}
 #head p.search label						{width:auto; margin-right:10px; float:left}
-#head p.search input.txt					{width:135px; height:21px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
+#head p.search input.txt					{width:125px; height:15px; margin-right:7px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#2c2d2c; border:0; background:url(searchbg.png) no-repeat}
 #head p.search input.btn					{width:68px; height:21px; float:left; border:0; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:11px; color:#999999; text-align:center; cursor:pointer; background:url(searchbtn.png) no-repeat}
 #head p.search input.btn:active				{background-position:2px 2px}
-h1.logo										{width:160px; height:36px; margin-top:50px; float:left; background:url(logo.png) no-repeat}
+h1.logo										{width:160px; height:36px; margin-top:50px; margin-left:50px; float:left; background:url(logo.png) no-repeat}
 h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #head ul									{width:500px; height:30px; margin-top:45px; float:right}
 #head ul li									{width:auto; margin-left:1px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:13px; color:#5f5f5f; line-height:20px; text-transform:uppercase}
@@ -85,7 +85,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #latest ul li a								{width:auto; margin-top:25px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#848484; line-height:24px}
 #latest ul li p								{width:100%; margin-top:16px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c; line-height:16px}	
 
-#foot										{width:100%; height:163px; float:left; background:url(footBg.png) repeat-x}
+#foot										{width:100%; height:163px; float:left; }
 #foot_cen									{width:800px; margin:28px auto 0 auto}
 #foot h6									{width:160px; height:36px; margin:0 auto; text-indent:-9999px; background:url(logo.png) no-repeat}
 #foot h6 a									{width:100%; height:100%; float:left}
@@ -105,6 +105,9 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
 
-.div-slider {width:95%;margin-right:20px;}
+.div-slider {width:95%;margin-right:20px;  position:relative; margin-top:160px}
 .clrear-float {clear:both}
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
+.pull-left {margin-left :30px; margin-top:10px}
+.main { width:940px; float:right; margin-right:87px}
+
