--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -26,7 +26,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-24px}
 
-#content									{margin-top:0px; width:100%; padding-bottom:36px; float:left; background:#ffffff url(contentBg.png) repeat-x}
+#content									{margin-top:10px; width:100%; padding-bottom:36px; float:left; background:#ffffff url(contentBg.png) repeat-x; height:600px}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -59,10 +59,11 @@ h3 span										{color:#3b3b3b; margin-right:0px}
 ul#infoPan									{width:100%; float:left}
 ul#infoPan li								{width:226px; margin-left:56px; float:left}
 ul#infoPan li:first-child					{margin:0}
-ul#infoPan li h3							{width:100%; height:67px; float:left; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px}
+ul#infoPan li h3							{width:100%; height:67px; float:left; font-size:26px; color:#31a1ff; font-weight:bold; line-height:60px; letter-spacing:-1.7px; margin-left:-5px;}
 ul#infoPan li h3 span						{color:#3b3b3b; margin-right:2px}
 ul#infoPan li h3 img						{margin-right:31px; float:right}
 ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
+ul#infoPan li p a             {font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
 ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;}
 
 #quotPan									{width:848px; height:80px; margin-top:42px; float:left; position:relative; left:-24px; border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
