modify desing part4

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,24 +1,19 @@
-%div
-  %h1 
-    =t "products.title" 
-.row-fluid
-  %ul.thumbnails
-    -@products.each do |product|
-      %li.span4
-        .thumbnail.item-row
-          = image_tag product.pictures.first.image(:small) if product.pictures.present?    
-          .caption          
-            %h3
-              =raw product.title
-            %p 
-              =raw product.description
-          .row-controls
-            = link_to edit_product_path(product) do
-              %i.icon-edit
-            = link_to  product, :method => :delete, :data => { :confirm => 'Are you sure?' }  do
-              %i.icon-trash
-              
-        
-        
-    
-    = link_to 'new products', new_product_path, :id => "new_btn"
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        Company
+      Products List
+    .show-list
+      .table
+        - @products.each do |product|
+          .tr            
+            .td= link_to (image_tag product.pictures.first.image(:small)), product
+            .td= link_to product.title, product
+            .td
+              = link_to 'اعمال تغییرات', edit_product_path(product)
+              = link_to 'حذف', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          .clrear-float
+          
+  #quotPan        
+    = link_to 'New Products', new_product_path, :class => "btn", :name => "btn"
