--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,25 +1,20 @@
-%div.newP_page
-	%h1 لیست خدمات
-	%div
-		%table
-			%tr
-				%th عنوان
-				%th نمونه تصویر
-				%th 
-				%th
-				%th
-				%th
-				
-			- @services.each do |service|
-				%tr
-					%td= service.title
-					%td= image_tag service.pictures.first.image(:small)
-					%td
-					%td= link_to 'مشاهده', service
-					%td= link_to 'اعمال تغییرات', edit_service_path(service)
-					%td= link_to 'حذف', service, :method => :delete, :data => { :confirm => 'Are you sure?' }
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        Company
+      Services List
+    .show-list
+      .table
+        - @services.each do |service|
+          .tr            
+            .td= link_to (image_tag service.pictures.first.image(:small)), service
+            .td= link_to service.title, service
+            .td
+              = link_to 'اعمال تغییرات', edit_service_path(service)
+              = link_to 'حذف', service, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          .clrear-float
+          
+  #quotPan        
+    = link_to 'New Services', new_service_path, :class => "btn", :name => "btn"
 
-		%br
-			
-		%div.div_btn
-			= link_to 'تعریف خدمات جدید', new_service_path, :id => "new_btn"
