--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -21,6 +21,6 @@
           %li
             = link_to "PRODUCTS", Product       
           %li
-            = link_to "ABOUT", Page
+            = link_to "ABOUT", Page.first
           %li
-            = link_to "CONTACT", Page
+            = link_to "CONTACT", Page.last
