--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,4 +39,14 @@
   padding: 7px;
   margin-bottom: 10px;
 }
+.list-div {width:900px; margin-right:10px}
+.show-list {margin-top:50px}
 
+.clrear-float {clear:both}
+.td {float:right; width:100px; margin:10px}
+.show-des-en {width:700px; margin-top:60px; text-align:left; float:left;}
+.show-des-fa {width:700px; margin-top:60px; text-align:right; float:right; margin-right:100px}
+
+.container1 {width: 100%; background:url(headBg.png) repeat-x;}
+
+ 
