--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -26,7 +26,7 @@ h1.logo a									{width:100%; height:100%; float:left; text-indent:-9999px}
 #cu3er-container							{width:800px; height:360px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-24px}
 
-#content									{margin-top:10px; width:100%; padding-bottom:36px; float:left; background:#ffffff url(contentBg.png) repeat-x; height:600px}
+#content									{margin-top:10px; width:100%; padding-bottom:20px; float:left; background:#ffffff url(contentBg.png) repeat-x;}
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 #ct_pan										{width:100%; height:120px; margin-top:94px; float:left; position:relative; font-family:Tahoma, Geneva, sans-serif; font-size:12px; color:#999999; line-height:16px; background:#3b3b3b}
@@ -38,7 +38,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:139px; left:-
 #ct_pan ul li a:hover						{color:#31a1ff}
 #ct_pan a.tweet								{width:95px; height:102px; float:right; position:absolute; right:-50px; top:42px; background:url(tweet.png) no-repeat}
 
-#welcom_pan									{width:100%; margin-top:37px; padding-bottom:36px; float:left; border-bottom:#c9c9c9 solid 1px; background:url(crosslines.png) no-repeat right 8px}
+#welcom_pan									{width:100%; margin-top:37px; padding-bottom:36px; float:left;  background:url(crosslines.png) no-repeat right 8px}
 h2											{width:auto; margin-top:9px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:26px; color:#31a1ff; font-weight:bold; line-height:30px; letter-spacing:-1.7px}
 h2 span										{color:#3b3b3b; text-transform:uppercase; margin-right:5px}
 #welcom_pan a.brochure						{width:auto; height:54px; margin-right:31px; padding:0 8px 0 0; float:right; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#ffffff; font-weight:bold; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
@@ -66,10 +66,11 @@ ul#infoPan li p								{width:100%; margin-top:25px; float:left; font-size:18px;
 ul#infoPan li p a             {font-size:18px; color:#848484; line-height:24px; letter-spacing:-0.8px}
 ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;}
 
-#quotPan									{width:848px; height:80px; margin-top:42px; float:left; position:relative; left:-24px; border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
+#quotPan									{width:848px; height:80px; margin-top:0px; float:right; position:relative; left:-24px; border-top:#c9c9c9 solid 1px; background:url(pat.png) repeat }
 #quotPan h3									{width:274px; margin:14px 0 0 24px; float:left; line-height:45px}
 #quotPan input.txt							{width:176px; margin:20px 20px 0 0; padding:3px 5px; height:30px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#bfbfbf; font-weight:bold; border:#cbcbcb solid 1px; background:#ffffff}
 #quotPan input.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:17px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
+#quotPan a.btn							{width:113px; height:42px; margin-top:18px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#ffffff; font-weight:bold; text-align:center; cursor:pointer; border:0; background:url(submitBtn.png) no-repeat}
 #quotPan input.btn:active					{background-position:1px 1px}
 
 #blog										{width:506px; margin-top:24px; float:left}
@@ -86,7 +87,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #latest ul li a								{width:auto; margin-top:25px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#848484; line-height:24px}
 #latest ul li p								{width:100%; margin-top:16px; float:left; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c; line-height:16px}	
 
-#foot										{width:100%; height:163px; float:left; }
+#foot										{width:100%; height:163px; float:left; background:url(footBg.png) repeat-x }
 #foot_cen									{width:800px; margin:28px auto 0 auto}
 #foot h6									{width:160px; height:36px; margin:0 auto; text-indent:-9999px; background:url(logo.png) no-repeat}
 #foot h6 a									{width:100%; height:100%; float:left}
@@ -106,9 +107,10 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:12px; line-height:16px;
 #service_pan ul li p						{width:300px; margin:5px 0 0 10px; float:left; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:12px; color:#5c5c5c}
 #service_pan ul li p a						{width:auto; float:right; color:#31a1ff}
 
-.div-slider {width:95%;margin-right:20px;  position:relative; margin-top:160px}
-.clrear-float {clear:both}
+.div-slider {width:70%; margin-right:40px; position:relative; margin-top:160px}
+
 .head-serach {width:100%; background:url(headsearch.png) repeat-x}
 .pull-left {margin-left :30px; margin-top:10px}
-.main { width:940px; float:right; margin-right:87px}
+.main { width:100%; }
+.show-title {overflow:scroll; width:200px; height:200px; margin:10px; }
 
