--- a/app/views/home/homedesign.html.haml
+++ b/app/views/home/homedesign.html.haml
@@ -16,14 +16,16 @@
             %span 
             Products
             %img{alt: "", src: "assets/icon1.png"}/
+          .show-title
             -Product.all.each do |product|
               %p
                 =link_to product.title, product              
         %li
           %h3
-            %span 
+            %span.show-title 
             Sevices
             %img{alt: "", src: "assets/icon2.png"}/
+          .show-title
             -Service.all.each do |service|
               %p
                 =link_to service.title, service             
@@ -32,28 +34,7 @@
             %span web
             market
             %img{alt: "", src: "assets/icon3.png"}/
+            
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           %p.descrip Maecenas ut lacus magna, ut consectetur quam. Etiam pharetra tincidunt massa, vitae pulvinar eros commodo ut. Sed in orci neque. Mauris eros est, auctor vitae.
-#foot
-  #foot_cen
-    %h6
-      %a{href: "index.html"} mcube
-    %ul
-      %li
-        = link_to "Home", homedesign_path
-      %li.space \
-      %li
-        = link_to "CONTACT", Page
-      %li.space /
-      %li
-        = link_to "SERVICES", Service
-      %li.space \
-      %li
-        = link_to "PRODUCTS", Product
-      %li.space /
-      %li
-        = link_to "ABOUT", Page
-      
-    %p
-      © Your Copyright Info Here. Designed by:
-      %a{href: "http://www.Raush.net", target: "_blank"} Raush.net
+
