--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,10 @@
     =javascript_include_tag "application"
     =csrf_meta_tags
   %body
-    .main
-      = render "shared/menu_bar" 
-    .container
+    
+    .container1
+      .main
+        = render "shared/menu_bar" 
       =yield      
+      = render 'shared/footer'  
       
