--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,16 +1,17 @@
-%p#notice= notice
-
-%p
-  %b 
-  = @page.title
-%p
-  %b Page html en:
-  =raw @page.page_html_en
-%p
-  %b Page html fa:
-  = @page.page_html_fa
-
-= link_to 'Edit', edit_page_path(@page)
-\|
-= link_to 'back', root_path
+.list-div
+  #welcom_pan   
+    %h2 
+      %span
+        = @page.title
+      Company
+    %p#notice= notice
+    .show-des-en     
+      =raw @page.page_html_en
+    .show-des-fa
+      =raw @page.page_html_fa
+      
+  #quotPan     
+    = link_to 'Edit', edit_page_path(@page), :class => "btn", :name => "btn"
+    \|
+    = link_to 'back', homedesign_path, :class => "btn", :name => "btn"
 
