added fa field for pictures

--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -29,5 +29,6 @@
       .field
         =picture.file_field :image
         =picture.text_area :description, :rows => 3
+        =picture.text_area :description_fa, :rows => 3
   .actions
     = f.submit 'ثبت'
