--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -12,6 +12,7 @@
     %div.div_pic	  
       -@product.pictures.each do |photo|
         = image_tag photo.image(:small), :class => "pic_service"
+        =photo.description
   
   %div.cr
   %div.footer_Link
