added fa fields for slider

--- a/app/views/slides/_form.html.haml
+++ b/app/views/slides/_form.html.haml
@@ -8,8 +8,10 @@
 
   .field
     = f.file_field :image, :id => "slide_img"
-    = f.label :توضیحات
+    = f.label :dscription
     = f.text_area :description, :id => "slide_des"
+    = f.label :description_fa
+    = f.text_area :description_fa, :id => "slide_des"
     
   .actions
     .div_btn
